--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include 'launcher'
 include 'plugins'
 include 'scala'
 include 'eclipse'
+include 'idea'
 include 'osgi'
 include 'maven'
 include 'announce'
