--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
@@ -12,8 +12,7 @@ dependencies {
 }
 
 ideaModule.doLast {
-    compareXmlWithIgnoringOrder(rootProject.file('src/expectedWebserviceModule.xml').text,
-            file("webservice.iml").text)
+    compareXmlWithIgnoringOrder(getExpectedXml(project, 'expectedWebserviceModule.xml'), file("webservice.iml").text)
 }
 
 cleanIdea.doLast {
