--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/api/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/api/build.gradle
@@ -1,11 +1,9 @@
-package org.gradle.integtests.IdeaIntegrationTest.api
 dependencies {
     runtime 'commons-collections:commons-collections:3.2@jar'
 }
 
 ideaModule.doLast {
-    compareXmlWithIgnoringOrder(rootProject.file('src/expectedApiModule.xml').text,
-            file("api.iml").text)
+    compareXmlWithIgnoringOrder(getExpectedXml(project, 'expectedApiModule.xml'), file("api.iml").text)
 }
 
 cleanIdea.doLast {
