GRADLE-1016 Fixed typos and updated docs. Thanks to Chris Beams for pointing this out.

--- a/subprojects/gradle-docs/src/samples/userguide/multiproject/subprojectsAddFromTop/water/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/multiproject/subprojectsAddFromTop/water/build.gradle
@@ -5,5 +5,5 @@ subprojects {
     hello << {println "- I depend on water"}
 }
 project(':bluewhale').hello << {
-    println "I'm the largest animal that has ever lived on this planet."
+    println "- I'm the largest animal that has ever lived on this planet."
 }
