--- a/subprojects/gradle-docs/docs.gradle
+++ b/subprojects/gradle-docs/docs.gradle
@@ -184,6 +184,7 @@ task javadoc(type: Javadoc) {
     include 'org/gradle/*'
     include 'org/gradle/external/javadoc/**'
     include 'org/gradle/process/**'
+    include 'org/gradle/plugins/**'
     include 'org/gradle/testfixtures/**'
     exclude '**/internal/**'
     options.links("http://java.sun.com/j2se/1.5.0/docs/api", "http://groovy.codehaus.org/gapi/", "http://maven.apache.org/ref/2.2.1/maven-core/apidocs",
