--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,9 @@ libraries = [
         logback_core: 'ch.qos.logback:logback-core:0.9.21@jar',
         junit: 'junit:junit:4.8.1',
         xmlunit: 'xmlunit:xmlunit:1.3',
-        spock: 'org.spockframework:spock-core:0.4-groovy-1.7'
 ]
 
+libraries.spock = ['org.spockframework:spock-core:0.4-groovy-1.7@jar', libraries.groovy, 'cglib:cglib-nodep:2.2', 'org.objenesis:objenesis:1.2']
 libraries.groovy_depends = [libraries.groovy, libraries.commons_cli]
 libraries.jetty_depends = ["org.mortbay.jetty:jetty:6.1.22@jar", "org.mortbay.jetty:jetty-util:6.1.22@jar",
         "javax.servlet:servlet-api:2.5@jar"]
@@ -123,20 +123,8 @@ configure(groovyProjects()) {
     }
 }
 
-buildscript {
-    repositories {
-        mavenRepo urls: 'http://gradle.artifactoryonline.com/gradle/plugins'
-    }
-    dependencies {
-        classpath "org.gradle.plugins:gradle-idea-plugin:0.3.1"
-    }
-}
-
 allprojects {
-    apply plugin: 'org.gradle.idea'
-    ideaModule {
-        excludeDirs.add(buildDir)
-    }
+    apply plugin: 'idea'
     def config = configurations.findByName('testRuntime')
     if (!config) {
         return
@@ -154,10 +142,9 @@ allprojects {
 }
 
 ideaModule {
-    excludeDirs.add(file('intTestHomeDir'))
-    excludeDirs.add(file('.gradle'))
-    excludeDirs.add(file('buildSrc/build'))
-    excludeDirs.add(file('buildSrc/.gradle'))
+    excludeDirs += file('intTestHomeDir')
+    excludeDirs += file('buildSrc/build')
+    excludeDirs += file('buildSrc/.gradle')
 }
 
 ideaProject {
@@ -180,12 +167,8 @@ configurations {
 }
 
 dependencies {
-    runtimeProjects().each {
-        runtime project(path: it.path)
-    }
-    pluginProjects().each {
-        plugins project(path: it.path)
-    }
+    runtime runtimeProjects()
+    plugins pluginProjects()
 }
 
 evaluationDependsOn(':docs')
