GRADLE-1029 - Allow std err capture level to be specified - Added Script, Project, Task getLogging() which returns a LoggingManager - Added LoggingManager.captureStandardError() - Deprecated Script, Project, Task captureStandardOutput() and disableStandardOutputCapture()

--- a/subprojects/gradle-docs/src/samples/logging/init.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/init.gradle
@@ -1,7 +1,11 @@
 
-println 'init quiet out'
-captureStandardOutput(LogLevel.INFO)
-println 'init info out'
+println 'init QUIET out'
+logging.captureStandardOutput LogLevel.INFO
+println 'init INFO out'
+
+System.err.println 'init ERROR err'
+logging.captureStandardError LogLevel.INFO
+System.err.println 'init INFO err'
 
 logger.lifecycle('init lifecycle log')
 logger.info('init info log')
