--- a/subprojects/gradle-docs/src/samples/logging/settings.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/settings.gradle
@@ -1,7 +1,7 @@
 include 'project1', 'project2'
 
 println 'settings quiet out'
-captureStandardOutput(LogLevel.INFO)
+logging.captureStandardOutput(LogLevel.INFO)
 println 'settings info out'
 
 logger.lifecycle('settings lifecycle log')
