GRADLE-1047 - First pass at revised output for gradle -t - Added Task.taskGroup property, to allow tasks to be grouped for display and reporting purposes. - Changed gradle -t to show only those tasks whose taskGroup is not null (temporarily).

--- a/subprojects/gradle-code-quality/code-quality.gradle
+++ b/subprojects/gradle-code-quality/code-quality.gradle
@@ -29,7 +29,7 @@ dependencies {
     runtime "checkstyle:checkstyle:5.1@jar",
             libraries.antlr,
             libraries.jcl_to_slf4j,
-            "com.google.collections:google-collections:1.0@jar",
+            libraries.google_collections,
             BEAN_UTILS
     
     testCompile project(path: ':core', configuration: 'testFixtures')
