--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ libraries = [
         commons_io: 'commons-io:commons-io:1.4@jar',
         commons_lang: 'commons-lang:commons-lang:2.5@jar',
         dom4j: 'dom4j:dom4j:1.6.1@jar',
+        google_collections: 'com.google.collections:google-collections:1.0@jar',
         groovy: 'org.codehaus.groovy:groovy-all:1.7.3@jar',
         ivy: 'org.apache.ivy:ivy:2.2.0-rc1@jar',
         jaxen: 'jaxen:jaxen:1.1@jar',
