--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -64,6 +64,7 @@ dependencies {
             libraries.commons_io,
             libraries.commons_lang,
             "commons-codec:commons-codec:1.2@jar",
+            libraries.google_collections,
             "commons-collections:commons-collections:3.2.1@jar",
             "slide:webdavlib:2.0@jar",
             "org.apache.maven:maven-ant-tasks:2.1.0@jar",
