--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 *~
 .gradle
-out
+/build
+/out
 /intellij
-userguide-trunk.tmproj
-buildSrc/lib
-buildSrc/.gradle
-subprojects/*/ide
-subprojects/*/build
-website/build
-website/.gradle
-website/ide
+/buildSrc/lib
+/buildSrc/build
+/subprojects/*/build
+/website/build
+ide
 *.iml
 *.ipr
 *.iws
-tmpTest
-intTestHomeDir
+/intTestHomeDir
