GRADLE-1040 - Fixed case where user upgrades from previous Gradle version for a build which has custom task implementations in the buildSrc dir. - Added some infrastructure to allow int tests to use previous versions of Gradle - Added BackwardsCompatibilityIntegrationTest to add some real int test coverage of Gradle's backwards compatibility (such as it is). This is only run as part of the CI build.

--- a/subprojects/gradle-docs/src/samples/logging/buildSrc/build.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/buildSrc/build.gradle
@@ -12,6 +12,10 @@ class ProjectInfo implements org.gradle.api.internal.plugins.EmbeddableJavaProje
         return ['classes']
     }
 
+    Collection<String> getBuildTasks() {
+        return ['classes']
+    }
+
     FileCollection getRuntimeClasspath() {
         return project.files()
     }
