--- a/subprojects/gradle-docs/src/samples/logging/nestedBuild/buildSrc/build.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/nestedBuild/buildSrc/build.gradle
@@ -12,6 +12,10 @@ class ProjectInfo implements org.gradle.api.internal.plugins.EmbeddableJavaProje
         return ['classes']
     }
 
+    Collection<String> getBuildTasks() {
+        return ['classes']
+    }
+
     FileCollection getRuntimeClasspath() {
         return project.files()
     }
