Added configuration for Eclipse plugin.

--- a/build.gradle
+++ b/build.gradle
@@ -126,6 +126,7 @@ configure(groovyProjects()) {
 
 allprojects {
     apply plugin: 'idea'
+    apply plugin: 'eclipse'
     def config = configurations.findByName('testRuntime')
     if (!config) {
         return
