--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -109,6 +109,18 @@ ideaModule {
     scopes.TEST.plus.add(configurations.integTestRuntime)
 }
 
+eclipseClasspath {
+    dependsOn ideVersionProperties
+    plusConfigurations.add(configurations.detachedConfiguration(new DefaultSelfResolvingDependency(files(new File(ideDir, "resources/test/")))))
+    plusConfigurations.add(configurations.detachedConfiguration(new DefaultSelfResolvingDependency(files(project.sourceSets.integTest.resources.srcDirs))))
+    plusConfigurations.add(configurations.integTestCompile)
+    plusConfigurations.add(configurations.integTestRuntime)
+	whenConfigured { classpath ->
+		classpath.entries.removeAll { entry -> entry.kind == 'src' && entry.path.startsWith('src/integTest/resources')}
+	}
+}
+
+
 
 [compileGroovy, compileTestGroovy]*.groovyOptions*.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
 
