--- a/wrapper/gradle-wrapper.properties
+++ b/wrapper/gradle-wrapper.properties
@@ -18,8 +18,8 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-20100623131307+1000
+distributionVersion=0.9-20100727090849+0200
 zipStorePath=wrapper/dists
-urlRoot=http\://snapshots.dist.codehaus.org/gradle
+urlRoot=http\://gradle.artifactoryonline.com/gradle/distributions/gradle-snapshots
 distributionName=gradle
 distributionClassifier=bin
