--- a/subprojects/gradle-eclipse/src/main/resources/META-INF/gradle-plugins/eclipse.properties
+++ b/subprojects/gradle-eclipse/src/main/resources/META-INF/gradle-plugins/eclipse.properties
@@ -13,4 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-implementation-class=org.gradle.api.plugins.EclipsePlugin
+implementation-class=org.gradle.plugins.eclipse.EclipsePlugin
