Set downloadJavadoc to false as a default for the idea plugin.

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/IdeaIntegrationTest/canCreateAndDeleteMetaData/build.gradle
@@ -20,6 +20,10 @@ allprojects {
 subprojects {
     apply plugin: 'java'
 
+    ideaModule {
+        downloadJavadoc = true
+    }
+
     repositories {
         mavenCentral()
     }
