--- a/subprojects/gradle-docs/src/samples/eclipse/build.gradle
+++ b/subprojects/gradle-docs/src/samples/eclipse/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'war'
 // START SNIPPET use-plugin
 apply plugin: 'eclipse'
 // END SNIPPET use-plugin
@@ -28,8 +29,8 @@ eclipseProject {
 
 // START SNIPPET wtp-with-xml
 eclipseWtp {
-    withXml { root ->
-        root.fixed.find { it.@facet == 'jst.java' }.@facet = 'jst2.java'
+    withXml { xml ->
+        xml.'org.eclipse.wst.commons.project.facet.core'.fixed.find { it.@facet == 'jst.java' }.@facet = 'jst2.java'
     }
 }
 // END SNIPPET wtp-with-xml
