--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/projectReports/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/projectReports/build.gradle
@@ -23,10 +23,15 @@ allprojects {
     }
 }
 
+task libs {
+    dependsOn { subprojects*.libs }
+    description = 'Builds the JAR'
+}
+
 // START SNIPPET add-task-to-report
 task dists {
 // END SNIPPET add-task-to-report
-    dependsOn { subprojects*.libs }
+    dependsOn libs
 // START SNIPPET add-task-to-report
     description = 'Builds the distribution'
     group = 'build'
