--- a/wrapper/gradle-wrapper.properties
+++ b/wrapper/gradle-wrapper.properties
@@ -18,8 +18,8 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-20100727090849+0200
+distributionVersion=0.9-rc-1
 zipStorePath=wrapper/dists
-urlRoot=http\://gradle.artifactoryonline.com/gradle/distributions/gradle-snapshots
+urlRoot=http\://dist.codehaus.org/gradle
 distributionName=gradle
 distributionClassifier=bin
